# wordle-stats-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-beta.yml  docker-release.yml
src/wordle_discord_bot/: config.py  database.py  main.py
src/wordle_discord_bot/cogs/: wordle_cog.py
src/wordle_discord_bot/utils/: parsing.py
